# r5r-cn-launcher

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/keys/: updater.key.pub
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/accelerator/: mod.rs
src-tauri/src/commands/: accelerator.rs  config.rs  dashboard.rs  detect.rs  install.rs  launch.rs  launch_options.rs  mod.rs  proxy.rs  settings.rs  updater.rs
src-tauri/src/config/: fetch.rs  mod.rs  paths.rs  remote.rs  settings.rs
src-tauri/src/dashboard/: mod.rs
src-tauri/src/detect/: library_scan.rs  mod.rs  official_settings.rs  registry.rs  shortcut.rs
src-tauri/src/download/: chunk.rs  mod.rs  pipeline.rs  progress.rs  retry.rs  worker.rs
src-tauri/src/launch_options/: catalog.rs  compose.rs  mod.rs  model.rs  validate.rs
src-tauri/src/manifest/: fetch.rs  filter.rs  mod.rs  schema.rs
src-tauri/src/offline/: dir_import.rs  mod.rs  shape_detect.rs  zip_import.rs
src-tauri/src/process/: launch.rs
src-tauri/src/proxy/: factory.rs  mod.rs  mode.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/verify/: checksum.rs  mod.rs
src/components/: GlassCard.tsx  InstallProgress.tsx  PrimaryButton.tsx  Sidebar.tsx
src/hooks/: useAccelerators.ts  useInstallProgress.ts  useLaunchExited.ts  useSettings.tsx
src/ipc/: accelerator.ts  config.ts  dashboard.ts  detect.ts  install.ts  invoke.ts  launch.ts  proxy.ts  (+4 more)
(+4 files in other folders)
