[package]
name = "launcher-app"
version = "0.2.0"
description = "R5R 中国镜像启动器"
authors = ["you"]
edition = "2021"

[lib]
name = "launcher_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core + plugins
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-channel = "2.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "gzip", "brotli", "socks"] }
sysproxy = "0.3"
url = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing / fs
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
zip = "2.1"
tempfile = "3.10"
bytes = "1.6"
dunce = "1.0"

# Errors / logging / utils
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
lnk = "0.5"
known-folders = "1"
